--- a/cities.html
+++ b/cities.html
@@ -26,6 +26,8 @@
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
+    <li>Vancouver (13,234,391)</li>
+    <li>Toronto (15,223,451)</li>
   </ol>
 
 </body>
